feat(events): renomear temporadas para eventos, permitir múltiplos juízes e exportação em pdf sem repetição
